--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </p>
     </div>
     <div class="six">
-      <video src="img/nabil.mp4" alt="" class="lydia-dp" data-node-name="imagePath">
+      <video src="img/nabil.jpg" alt="" class="lydia-dp" data-node-name="imagePath">
       <div class="wish">
         <h3 class="wish-hbd" data-node-name="wishHeading">Happy Birthday!</h3>
         <h5 data-node-name="wishText">May the js.prototypes always be with you! ;)</h5>
