--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
       </p>
     </div>
     <div class="six">
-      <video src="img/lydia2.png" alt="" class="lydia-dp" data-node-name="imagePath">
+      <img src="img/lydia2.png" alt="" class="lydia-dp" data-node-name="imagePath">
+      <img src="img/hat.svg" alt="" class="hat">
       <div class="wish">
         <h3 class="wish-hbd" data-node-name="wishHeading">Happy Birthday!</h3>
         <h5 data-node-name="wishText">May the js.prototypes always be with you! ;)</h5>
